--- a/src/pagCadastro.html
+++ b/src/pagCadastro.html
@@ -1,9 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
     <h1>Cadastro de Aluno</h1>
-    <form action="#" method="post">
+    <form action="cadastra.php" method="post">
         <div>
             <label for="nome" class="required">Nome Completo</label>
             <input type="text" id="nome" name="nome" required>
+            <!-- required é usado para transformar o campo em obrigatorio -->
         </div>
 
         <div>
@@ -46,6 +54,7 @@
 
         <button type="submit">Cadastrar Aluno</button>
     </form>
+    
+    
 </body>
-
 </html>
