--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <a href="src/pagCadastro.html"><p>Acesso ao Cadastro</p></a>
     <a href=""><p>Fazer chamada</p></a>
     <a href=""><p>Gerencia horarios</p></a>
+    <a href=""><p>testes</p></a>
     
     
 </body>
