--- a/src/pagCadastro.html
+++ b/src/pagCadastro.html
@@ -7,25 +7,26 @@
 </head>
 <body>
     <h1>Cadastro de Aluno</h1>
-    <form action="cadastra.php" method="post">
+    <form action="../pages/cadastra.php" method="post">
+        <input type="hidden" name="action" value="cadastro">
         <div>
-            <label for="nome" class="required">Nome Completo</label>
+            <label for="nome" >Nome Completo</label>
             <input type="text" id="nome" name="nome" required>
             <!-- required é usado para transformar o campo em obrigatorio -->
         </div>
 
         <div>
-            <label for="data_nasc" class="required">Data de Nascimento</label>
+            <label for="data_nasc" >Data de Nascimento</label>
             <input type="date" id="data_nasc" name="data_nasc" required>
         </div>
 
         <div>
-            <label for="cpf" class="required">CPF</label>
+            <label for="cpf" >CPF</label>
             <input type="text" id="cpf" name="cpf" required placeholder="000.000.000-00">
         </div>
 
-        <div>
-            <label for="email" class="required">E-mail</label>
+        <!-- <div>
+            <label for="email" >E-mail</label>
             <input type="email" id="email" name="email" required>
         </div>
 
@@ -37,10 +38,11 @@
         <div>
             <label for="endereco">Endereço</label>
             <input type="text" id="endereco" name="endereco">
-        </div>
+        </div> --> 
+        <!-- comentei para realizar testes simples -->
 
         <div>
-            <label for="curso" class="required">Curso de Interesse #(exemplo)</label>
+            <label for="curso" >Curso de Interesse #(exemplo)</label>
             <select id="curso" name="curso" required>
                 <option value="">Selecione um curso</option>
                 <option value="informatica">Informática Básica</option>
