Adicionando funcionalidade de adicionar aulas ao sistema.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Pagina inicial</title>
 </head>
 <body>
-    <a href="src/pagCadastro.html"><p>Acesso ao Cadastro</p></a>
-    <a href=""><p>Fazer chamada</p></a>
-    <a href=""><p>Gerencia horarios</p></a>
+    <a href="src/pagCadastro_aluno.html"><p>Acesso ao Cadastro</p></a>
+    <a href="src/pagCadastro_aula.html"><p>Gerenciar aulas</p></a>
+    <a href=""><p>chamada</p></a>
     <a href=""><p>testes</p></a>
     
     
