--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <a href="src/pagCadastro_aluno.html"><p>Acesso ao Cadastro</p></a>
     <a href="src/pagCadastro_aula.html"><p>Gerenciar aulas</p></a>
-    <a href=""><p>chamada</p></a>
-    <a href=""><p>testes</p></a>
+    <a href="src/login.php"><p>Login teste</p></a>
+    <a href="Core/tests.php"><p>testes</p></a>
     
     
 </body>
