--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="src/pagCadastro_aula.html"><p>Gerenciar aulas</p></a>
     <a href="src/login.php"><p>Login teste</p></a>
     <a href="Core/tests.php"><p>testes</p></a>
+    <a href="src/main.php">Pagina principal</a>
     
     
 </body>
